syntax = "proto3";

option csharp_namespace = "DeliveryService.Backend.Courier.Grpc";

package greet;

service CourierBackend {
  rpc Store2WhStart (HelloRequest) returns (HelloReply);
  rpc Store2WhExecute (HelloRequest) returns (HelloReply);
  rpc DeliverOrderStart (HelloRequest) returns (HelloReply);
  rpc DeliverOrderExecute (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}
